# inboxpilot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: preview.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  routes_activity.py  routes_ai.py  routes_contacts.py  routes_emails.py  routes_health.py  routes_me.py  routes_sequences.py  routes_workspaces.py
backend/app/core/: config.py  db.py  email.py  openai_client.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/contacts/: page.tsx
frontend/src/app/sequences/: page.tsx
frontend/src/app/sequences/[sequenceId]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts
